# gamers-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  SETUP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  nixpacks.toml  package.json  pnpm-lock.yaml  railway.toml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/api/: B2-README.md  Dockerfile  drizzle.config.ts  package.json  railway.toml  tsconfig.json  vitest.config.ts
apps/api/src/: index.ts
apps/web/: Dockerfile  capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: offline.html
apps/web/src/: App.tsx  (+2 more)
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: main.rs
apps/worker/: Dockerfile  package.json  railway.toml  tsconfig.json
docs/: AGENT_B10_HANDOFF.md  AGENT_B10_SUMMARY.md  AGENT_B11_HANDOFF.md  AGENT_B11_SUMMARY.md  AGENT_B12_HANDOFF.md  AGENT_B12_SUMMARY.md  AGENT_B13_HANDOFF.md  AGENT_B13_SUMMARY.md  AGENT_B14_HANDOFF.md  AGENT_B14_SUMMARY.md  AGENT_B15_HANDOFF.md  AGENT_B15_SUMMARY.md  AGENT_B5_SUMMARY.md  AGENT_B6_HANDOFF.md  AGENT_B6_SUMMARY.md  AGENT_B7_HANDOFF.md  AGENT_B7_SUMMARY.md  AGENT_B8_HANDOFF.md  AGENT_B8_SUMMARY.md  AGENT_B9_HANDOFF.md  AGENT_B9_SUMMARY.md
infra/caddy/: Caddyfile
infra/monitoring/: docker-compose.monitoring.yml  promtail-config.yml
infra/nginx/: nginx.conf
infra/railway-minio/: Dockerfile
infra/scripts/: backup.sh  deploy.sh  generate-icons.mjs  setup-server.sh
(+172 files in other folders)
