[package]
name = "gamers-hub"
version = "0.1.0"
description = "Gamers Hub — Your unified gaming library"
authors = []
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "gamers-hub"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
